Fixed search button on Firefox

--- a/app/main.css
+++ b/app/main.css
@@ -5069,6 +5069,7 @@ page-404__title::after {
         background-image: url(../images/search.svg);
         background-size: 50%;
         cursor: pointer;
+        right: 16px;
     }
 
     .search-toggle:not(.search-toggle--close) .search-toggle__cross-icon {
